--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^5.7.3",
     "register-service-worker": "^1.5.2",
-    "vue": "^2.5.21"
+    "vue": "^2.5.21",
+    "vuefire": "^1.4.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
